# python-leancheck

./: .gitignore  MANIFEST.in  Makefile  README.md  TODO.md  changelog.md  pyproject.toml  release.md
.github/workflows/: test.yml
examples/: arith.py  arith.txt  bool.py  bool.txt  card.py  card.txt  class.py  class.txt  dump.py  dump.txt  empty.py  empty.txt  entropy.py  entropy.txt  enumerators.py  enumerators.txt  float.py  float.txt  person.py  person.txt  point.py  point.txt  sort.py  sort.txt  sortok.py  sortok.txt
junk/: junk.py
src/: leancheck.py
src/leancheck/: __init__.py  base.py  core.py  enumerator.py  funtype.py  gen.py  iitertools.py  misc.py  ty.py
tests/: distfiles.sh  test_leancheck.py
